ctms-commons history
====================

1.0.0
-----

### core

- Backwards incompatible change:  introduce ConfigurationProperty and
  ConfigurationProperties interfaces.  The classes which had these names
  are now called DefaultConfigurationProperty and
  DefaultConfigurationProperties.

### all

- Begin formal changelog